# modm-pinout

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yaml
src/modm_pinout/: __init__.py  __main__.py  builder.py  catalog.py  device_loader.py  resources.py
src/modm_pinout/assets/scripts/: pinout-app.js  pinout-core.js  pinout-io.js  pinout-loader.js  pinout-package-renderers.js  pinout-package.js  pinout-persistence.js  pinout-regex.js  pinout-table.js
src/modm_pinout/assets/styles/: pinout.css
src/modm_pinout/templates/: pin_index.html.j2  pin_matrix.html.j2
